# lapack

./: meson.build
CBLAS/examples/: cblas_example1_64.c
CBLAS/include/: cblas.h  cblas_test.h
LAPACKE/include/: lapack.h  lapacke.h
SRC/: CMakeLists.txt  Makefile  cgelsy.f  dgelsy.f  sgelsy.f  zgelsy.f
devialet/build_scripts/host_linux_x86_64/: build_all.sh  build_arch.sh
